# mcc

./: .gitignore  CMakeLists.txt  README.md  main.c
compiler/c/: preprocessor.c  preprocessor.h
compiler/cre/: grapher.c  grapher.h  parser.c  parser.h
generator/: code_graph.c  code_graph.h
generator/linux-x86/: generator.c  generator.h
launchers/: cre-linux-x86.c  launchers.c  launchers.h
parser/: load.c  load.h
preprocessor/: controller.c  controller.h
test/: build-all.sh  build.sh  hello-test.S  hello-test.cre  linux-x86-test.c  regex-test.c  test1.S  test1.cre  token-test.cre
util/: buffer.c  buffer.h  delegate.c  delegate.h  dictionary.c  dictionary.h  io.c  io.h  linked_list.c  linked_list.h  misc.c  misc.h  regex.c  regex.h
